--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,9 @@ psycopg2 = "*"
 pillow = "*"
 django-cors-headers = "*"
 django-templated-mail = "*"
+redis = "*"
+celery = "*"
+flower = "*"
 
 [dev-packages]
 autopep8 = "*"
