--- a/Pipfile
+++ b/Pipfile
@@ -22,6 +22,10 @@ flower = "*"
 
 [dev-packages]
 autopep8 = "*"
+pytest = "*"
+pytest-django = "*"
+pytest-watch = "*"
+model-bakery = "*"
 
 [requires]
 python_version = "3.9"
